--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,10 +16,10 @@ builds:
 
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
+      #darwin: Darwin
+      #linux: Linux
+      #windows: Windows
+      #386: i386
       amd64: x86_64
 checksum:
   name_template: "checksums.txt"
