--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,16 +11,22 @@ builds:
   - env:
       - CGO_ENABLED=0
 
+    goos:
+      - linux
+
+    goarch:
+      - 386
+      - amd64
+
     hooks:
       post: /bin/bash upx.sh
 
 archives:
   - replacements:
-      darwin: Darwin
       linux: Linux
-      windows: Windows
       386: i386
       amd64: x86_64
+
 checksum:
   name_template: "checksums.txt"
 snapshot:
